[package]
name = "rebone"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
eframe = "0.25.0"
egui = "0.25.0"
rfd = "0.13.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
